fix: limited storage size

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.1",
   "description": "A browser action with a popup dump of all bookmarks, including search, add, edit and delete.",
   "permissions": [
-    "bookmarks", "tabs", "storage", "activeTab", "<all_urls>"
+    "bookmarks", "tabs", "storage", "activeTab", "<all_urls>", "unlimitedStorage"
   ],
   "browser_action": {
       "default_title": "My Bookmarks",
